2011-02-02  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        bufferData and bufferSubData should generate INVALID_VALUE with negative input
        https://bugs.webkit.org/show_bug.cgi?id=53626

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::bufferData):
        (WebCore::WebGLRenderingContext::bufferSubData):
2011-02-02  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        bufferData and bufferSubData should generate INVALID_VALUE with negative input
        https://bugs.webkit.org/show_bug.cgi?id=53626

        * fast/canvas/webgl/buffer-data-array-buffer-expected.txt:
        * fast/canvas/webgl/buffer-data-array-buffer.html:


Canonical link: https://commits.webkit.org/67505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77421 268f45cc-cd09-0410-ab3c-d52691b4dbfc